--- a/ghicitoare1.html
+++ b/ghicitoare1.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header" class="preview">
 				<div class="inner">
-					<a href="index.html" class="button hidden"><span>Sa incepem</span></a>
+					<a href="home.html" class="button hidden"><span>Sa incepem</span></a>
 				</div>
 			</header>
 
