--- a/home.html
+++ b/home.html
@@ -14,14 +14,14 @@
 <body>
 
 	<!-- Header -->
-	<header id="header">
+	<header id="header" class="hide">
 		<div class="inner">
 			<div class="content">
 				<h1>Salut</h1>
 				<h2>Descopera cele mai interactive ghicitori</h2>
-				<a href="home.html" class="button big alt"><span>Sa incepem</span></a>
+				<a href="index.html" class="button big alt"><span>Sa incepem</span></a>
 			</div>
-			<a href="home.html" class="button hidden"><span>Sa incepem</span></a>
+			<a href="index.html" class="button hidden"><span>Sa incepem</span></a>
 		</div>
 	</header>
 
