--- a/ghicitoare1.html
+++ b/ghicitoare1.html
@@ -10,6 +10,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<style>
+		.riddleContent {
+		    -webkit-column-count: 2; /* Chrome, Safari, Opera */
+		}
+		</style>
+
 	</head>
 	<body>
 
@@ -22,23 +29,31 @@
 
 		<!-- Main -->
 			<div id="preview">
-				<div class="inner">
-					<div class="image fit">
-						<img src="images/1.png" alt="" />
+				<div class="inner"> 
+					<div class="riddleContent">
+							<img src="images/1a.png" alt="" />
+	                        <p>Are-o coada infoiata,
+								Hoata este si sireata
+								Dar e vai de coada ei
+								Cand da peste ea grivei.					
+	                        </p>
 					</div>
-					<div class="content">
-						<header>
-							<h2>Aliquam gravida felis vel velit accumsan</h2>
-						</header>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est ligula, ultrices id posuere vitae, rutrum in tellus. Suspendisse vitae aliquam metus. Cras blandit, tortor ut eleifend porttitor, urna lacus porttitor arcu, quis vestibulum metus dolor ut neque. Aenean et nisi venenatis, mollis enim eget, pharetra nunc. Sed blandit non mi nec ultrices. Vestibulum hendrerit tortor id gravida eleifend. Morbi vitae molestie odio. Etiam nec est vel sapien posuere vulputate eget eget mi. Quisque vulputate ligula velit, id accumsan dui fringilla nec. Morbi nisi mauris, placerat sit amet feugiat nec, vehicula ut ex.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec est ligula, ultrices id posuere vitae, rutrum in tellus. Suspendisse vitae aliquam metus. Cras blandit, tortor ut eleifend porttitor, urna lacus porttitor arcu, quis vestibulum metus dolor ut neque. Aenean et nisi venenatis, mollis enim eget, pharetra nunc. Sed blandit non mi nec ultrices. Vestibulum hendrerit tortor id gravida eleifend. Morbi vitae molestie odio. Etiam nec est vel sapien posuere vulputate eget eget mi. Quisque vulputate ligula velit, id accumsan dui fringilla nec. Morbi nisi mauris, placerat sit amet feugiat nec, vehicula ut ex.</p>
+					<div class="columns3">
+						<div class="image fit">
+							<a href="wrong.html"><img src="answears/rabbit.jpg" alt="" /></a>
+						</div>
+						<div class="image fit">
+							<a href="correct.html"><img src="answears/fox.png" alt="" /></a>
+						</div>
+						<div class="image fit">
+							<a href="wrong.html"><img src="answears/dog.png" alt="" /></a>
+						</div>
 					</div>
 				</div>
-				<a href="index.html" class="nav previous"><span class="fa fa-chevron-left"></span></a>
-				<a href="ghicitoare2.html" class="nav next"><span class="fa fa-chevron-right"></span></a>
-			</div
+			</div>
+			
 
-		<!-- Scripts -->
+		<!-- Scripts
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
