checkbox updates under the images

--- a/ghicitoare1.html
+++ b/ghicitoare1.html
@@ -42,6 +42,17 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 					<img src="answers/rabbit.gif" alt="fox" />
 				</div>
 			</div>
+			<div class="columns3 pad-top-50">
+				<div class="check-answer">
+				<i class="fa fa-circle-o fa-4x"></i>
+				</div>
+				<div class="check-answer">
+					<i class="fa fa-circle-o fa-4x"></i>
+				</div>
+				<div class="check-answer">
+					<i class="fa fa-circle-o fa-4x"></i>
+				</div>
+			</div>
 		</div>
 	</div>
 
