--- a/ghicitoare1.html
+++ b/ghicitoare1.html
@@ -30,10 +30,9 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				</p>
 			</div>
 			<div class="columns3 mg-top-150">
-				<div class="image fit audio-pad-75">
-					<audio controls>
-						<source src="answers/dog.mp3" type="audio/mpeg">
-					</audio>
+				<div class="image fit" style="text-align: center; padding-top: 45px;">
+					<button class="circle" id="play"><i class="fa fa-play fa-3x" style="padding-top: 5px; padding-left: 2px;"></i></button>
+					<button class="circle" id="pause"><i class="fa fa-pause fa-3x" style="padding-top: 5px;"></i></button>
 				</div>
 				<div class="image fit">
 					<img src="answers/fox.png" alt="fox" />
@@ -44,20 +43,19 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			</div>
 			<div class="columns3 pad-top-50">
 				<div class="check-answer">
-				<i class="fa fa-circle-o fa-4x"></i>
+					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
 				</div>
 				<div class="check-answer">
-					<i class="fa fa-circle-o fa-4x"></i>
+					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
 				</div>
 				<div class="check-answer">
-					<i class="fa fa-circle-o fa-4x"></i>
+					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
 				</div>
 			</div>
 		</div>
 	</div>
 
-
-<!-- Scripts
+<!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/skel.min.js"></script>
 <script src="assets/js/util.js"></script>
