--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 	<header id="header">
 		<div class="inner">
 			<div class="content">
-				<h1>Salut</h1>
-				<h2>Descopera cele mai interactive ghicitori</h2>
-				<a href="home.html" class="button big alt"><span>Sa incepem</span></a>
+				<img class="welc_image" src="images/pc.png" alt="" />
+				<a href="home.html" class="button big start"><span>START&nbsp;<i class="fa fa-play fa-1x"></i></span></a>
 			</div>
 			<a href="home.html" class="button hidden"><span>Sa incepem</span></a>
 		</div>
