Paginile cu ghicitori si raspunsuri. Textul ghicitorilor in format audio. Paginile cu ghicitorile ordonate - Aici lasam fara ghicitori sau trebuie sa facem alte pagini de ghicitori, pentru ca butonul de back te redirectioneaya pe pagina cu cea neordonate.

--- a/ghicitoare1.html
+++ b/ghicitoare1.html
@@ -26,13 +26,15 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 		<div class="inner-lg">
 			<div class="pad-top-50">
 				<p class="riddleText">
-					Are-o coadă înfoiată,<br>Hoaţă este şi şireată<br>Dar e vai de coada ei <br>Când dă peste ea Grivei.
+					Are-o coadă înfoiată,<br>Hoaţă este şi şireată<br>Dar e vai de coada ei <br>Când dă peste ea Grivei.<br>
+					<button class="circle" id="playT1"><i class="fa fa-play fa-3x" style="padding-top: 5px; padding-left: 2px;"></i></button>
+					<button class="circle" id="pauseT1"><i class="fa fa-pause fa-3x" style="padding-top: 5px;"></i></button>
 				</p>
 			</div>
 			<div class="columns3 mg-top-150">
 				<div class="image fit" style="text-align: center; padding-top: 45px;">
-					<button class="circle" id="play"><i class="fa fa-play fa-3x" style="padding-top: 5px; padding-left: 2px;"></i></button>
-					<button class="circle" id="pause"><i class="fa fa-pause fa-3x" style="padding-top: 5px;"></i></button>
+					<button class="circle" id="play1"><i class="fa fa-play fa-3x" style="padding-top: 5px; padding-left: 2px;"></i></button>
+					<button class="circle" id="pause1"><i class="fa fa-pause fa-3x" style="padding-top: 5px;"></i></button>
 				</div>
 				<div class="image fit">
 					<img src="answers/fox.png" alt="fox" />
