Images replaces play/pause button for text re-designed

--- a/ghicitoare1.html
+++ b/ghicitoare1.html
@@ -27,8 +27,8 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Are-o coadă înfoiată,<br>Hoaţă este şi şireată<br>Dar e vai de coada ei <br>Când dă peste ea Grivei.<br>
-					<button class="circle" id="playT1"><i class="fa fa-play fa-3x" style="padding-top: 5px; padding-left: 2px;"></i></button>
-					<button class="circle" id="pauseT1"><i class="fa fa-pause fa-3x" style="padding-top: 5px;"></i></button>
+					<button class="" id="playT1"><i class="fa fa-play fa-2x" style="padding-top: 5px; padding-left: 2px;"></i></button>
+					<button class="" id="pauseT1"><i class="fa fa-pause fa-2x" style="padding-top: 5px;"></i></button>
 				</p>
 			</div>
 			<div class="columns3 mg-top-150">
