--- a/ghicitoare4.html
+++ b/ghicitoare4.html
@@ -27,8 +27,8 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Albă păsărică<br>Pe arac se ridică.<br>N-are aripioare<br>N-are nici picioare.<br>
-					<button class="circle" id="playT4"><i class="fa fa-play fa-3x" style="padding-top: 5px; padding-left: 2px;"></i></button>
-					<button class="circle" id="pauseT4"><i class="fa fa-pause fa-3x" style="padding-top: 5px;"></i></button>
+					<button class="" id="playT4"><i class="fa fa-play fa-2x" style="padding-top: 5px; padding-left: 2px;"></i></button>
+					<button class="" id="pauseT4"><i class="fa fa-pause fa-2x" style="padding-top: 5px;"></i></button>
 				</p>
 			</div>
 			<div class="columns3 mg-top-150">
