--- a/ghicitoare7.html
+++ b/ghicitoare7.html
@@ -27,8 +27,8 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Hărnicuţă gospodină,<br>Strânge miere din grădină.<br>
-					<button class="circle" id="playT7"><i class="fa fa-play fa-3x" style="padding-top: 5px; padding-left: 2px;"></i></button>
-					<button class="circle" id="pauseT7"><i class="fa fa-pause fa-3x" style="padding-top: 5px;"></i></button>
+					<button class="" id="playT7"><i class="fa fa-play fa-2x" style="padding-top: 5px; padding-left: 2px;"></i></button>
+					<button class="" id="pauseT7"><i class="fa fa-pause fa-2x" style="padding-top: 5px;"></i></button>
 				</p>
 			</div>
 			<div class="columns3 mg-top-150">
