homepage and ghicitoare fixes

--- a/ghicitoare10.html
+++ b/ghicitoare10.html
@@ -45,13 +45,13 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			</div>
 			<div class="columns3 pad-top-50">
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_correct" />
 				</div>
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_wrong1" />
 				</div>
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_wrong2" />
 				</div>
 			</div>
 		</div>
