--- a/ghicitoare8.html
+++ b/ghicitoare8.html
@@ -32,25 +32,25 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				</p>
 			</div>
 			<div class="columns3 mg-top-150">
-				<div class="image fit">
+				<div class="image fit" style="text-align: center; padding-top: 60px;">
 					<img src="answers/capra.jpg" alt="fox" />
 				</div>
 				<div class="image fit">
 					<img src="answers/soarece2.jpg" alt="fox" />
 				</div>
-				<div class="image fit">
+				<div class="image fit" style="text-align: center; padding-top: 80px;">
 					<img src="answers/rabbit.gif" alt="fox" />
 				</div>
 			</div>
 			<div class="columns3 pad-top-50">
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_wrong2" />
 				</div>
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_wrong1" />
 				</div>
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_correct" />
 				</div>
 			</div>
 		</div>
