--- a/ghicitoare4.html
+++ b/ghicitoare4.html
@@ -35,7 +35,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				<div class="image fit">
 					<img src="answers/fasole.jpg" alt="fox" />
 				</div>
-				<div class="image fit" style="text-align: center; padding-top: 45px;">
+				<div class="image fit" style="text-align: center; padding-top: 60px;">
 					<button class="circle" id="play4"><i class="fa fa-play fa-3x" style="padding-top: 5px; padding-left: 2px;"></i></button>
 					<button class="circle" id="pause4"><i class="fa fa-pause fa-3x" style="padding-top: 5px;"></i></button>
 				</div>
@@ -45,13 +45,13 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			</div>
 			<div class="columns3 pad-top-50">
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_correct" />
 				</div>
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_wrong1" />
 				</div>
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_wrong2" />
 				</div>
 			</div>
 		</div>
