--- a/ghicitoare5.html
+++ b/ghicitoare5.html
@@ -35,22 +35,22 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				<div class="image fit">
 					<img src="answers/bear.gif" alt="fox" />
 				</div>
-				<div class="image fit">
+				<div class="image fit" style="text-align: center; padding-top: 40px;">
 					<img src="answers/om.jpg" alt="fox" />
 				</div>
-				<div class="image fit">
+				<div class="image fit" style="text-align: center; padding-top: 33px;">
 					<img src="answers/bear.jpg" alt="fox" />
 				</div>
 			</div>
 			<div class="columns3 pad-top-50">
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_wrong2" />
 				</div>
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_wrong1" />
 				</div>
 				<div class="check-answer">
-					<a href=""><img class="resize" src="images/button_push.png" alt="" /></a>
+					<input type="image" src="images/button_push.png" class="resize" id="checker_correct" />
 				</div>
 			</div>
 		</div>
