--- a/home.html
+++ b/home.html
@@ -28,40 +28,42 @@
 	<!-- Main -->
 	<div id="main">
 		<div class="inner">
+			<div class="columns1 padd_top">
+				<div class="image fit">
+					<a href="ghicitoare1.html"><img class="image_sm" src="images/1b.png" alt="" /></a>
+				</div>
+			</div>
+			<div class="columns2">
+				<div class="image fit">
+					<a href="ghicitoare6.html"><img class="image_sm" src="images/6b.png" alt="" /></a>
+				</div>
+				<div class="image fit">
+					<a href="ghicitoare10.html"><img class="image_sm" src="images/10b.png" alt="" /></a>
+				</div>
+			</div>
 			<div class="columns3">
 				<div class="image fit">
-					<a href="ghicitoare1.html"><img src="images/1b.png" alt="" /></a>
+					<a href="ghicitoare4.html"><img class="image_sm" src="images/4b.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare6.html"><img src="images/6b.png" alt="" /></a>
+					<a href="ghicitoare2.html"><img class="image_sm" src="images/2b.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare10.html"><img src="images/10b.png" alt="" /></a>
+					<a href="ghicitoare5.html"><img class="image_sm" src="images/5b.png" alt="" /></a>
 				</div>
 			</div>
 			<div class="columns4">
 				<div class="image fit">
-					<a href="ghicitoare4.html"><img src="images/4b.png" alt="" /></a>
+					<a href="ghicitoare9.html"><img class="image_sm" src="images/9b.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare2.html"><img src="images/2b.png" alt="" /></a>
+					<a href="ghicitoare8.html"><img class="image_sm" src="images/8b.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare5.html"><img src="images/5b.png" alt="" /></a>
+					<a href="ghicitoare3.html"><img class="image_sm" src="images/3b.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare9.html"><img src="images/9b.png" alt="" /></a>
-				</div>
-			</div>
-			<div class="columns3">
-				<div class="image fit">
-					<a href="ghicitoare8.html"><img src="images/8b.png" alt="" /></a>
-				</div>
-				<div class="image fit">
-					<a href="ghicitoare3.html"><img src="images/3b.png" alt="" /></a>
-				</div>
-				<div class="image fit">
-					<a href="ghicitoare7.html"><img src="images/7b.png" alt="" /></a>
+					<a href="ghicitoare7.html"><img class="image_sm" src="images/7b.png" alt="" /></a>
 				</div>
 
 			</div>
