Redesigned the the with the orderes riddles. Autoplay text for riddles. Welcome audio message.

--- a/ghicitoare2.html
+++ b/ghicitoare2.html
@@ -27,8 +27,9 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Are foi şi nu e pom,<br>Îţi vorbeşte ca un om.<br>
-					<button class="" id="playT2"><i class="fa fa-play fa-2x" style="padding-top: 5px; padding-left: 2px;"></i></button>
-					<button class="" id="pauseT2"><i class="fa fa-pause fa-2x" style="padding-top: 5px;"></i></button>
+					<audio controls autoplay class= "sqs-audio-embed">
+						<source src="audioText/t2.mp3">
+					</audio>
 				</p>
 			</div>
 			<div class="columns3 mg-top-150">
