--- a/ghicitoare4.html
+++ b/ghicitoare4.html
@@ -27,8 +27,9 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Albă păsărică<br>Pe arac se ridică.<br>N-are aripioare<br>N-are nici picioare.<br>
-					<button class="" id="playT4"><i class="fa fa-play fa-2x" style="padding-top: 5px; padding-left: 2px;"></i></button>
-					<button class="" id="pauseT4"><i class="fa fa-pause fa-2x" style="padding-top: 5px;"></i></button>
+					<audio controls autoplay class= "sqs-audio-embed">
+						<source src="audioText/t4.mp3">
+					</audio>
 				</p>
 			</div>
 			<div class="columns3 mg-top-150">
