--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	<header id="header">
 		<div class="inner">
 			<div class="content">
+				<audio controls autoplay class= "sqs-audio-embed">
+						<source src="audioText/instructiuni.mp3">
+					</audio>
 				<img class="welc_image" src="images/pc.png" alt="" />
 				<a href="home.html" class="button big start"><span>START&nbsp;<i class="fa fa-play fa-1x"></i></span></a>
 			</div>
