--- a/ghicitoare9.html
+++ b/ghicitoare9.html
@@ -27,8 +27,9 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Am cămăși nenumărate,<br>Plângi de le dezbraci pe toate!<br>
-					<button class="" id="playT9"><i class="fa fa-play fa-2x" style="padding-top: 5px; padding-left: 2px;"></i></button>
-					<button class="" id="pauseT9"><i class="fa fa-pause fa-2x" style="padding-top: 5px;"></i></button>
+					<audio controls autoplay class= "sqs-audio-embed">
+						<source src="audioText/t9.mp3">
+					</audio>
 				</p>
 			</div>
 			<div class="columns3 mg-top-150">
