--- a/ghicitoriOrdonate.html
+++ b/ghicitoriOrdonate.html
@@ -23,40 +23,42 @@
 	<!-- Main -->
 	<div id="main">
 		<div class="inner">
+			<div class="columns1 padd_top">
+				<div class="image fit">
+					<a href="ghicitoare1.html"><img class="image_sm" src="images/1a.png" alt="" /></a>
+				</div>
+			</div>
+			<div class="columns2">
+				<div class="image fit">
+					<a href="ghicitoare2.html"><img class="image_sm" src="images/2a.png" alt="" /></a>
+				</div>
+				<div class="image fit">
+					<a href="ghicitoare3.html"><img class="image_sm" src="images/3a.png" alt="" /></a>
+				</div>
+			</div>
 			<div class="columns3">
 				<div class="image fit">
-					<a href="ghicitoare1.html"><img src="images/1a.png" alt="" /></a>
+					<a href="ghicitoare4.html"><img class="image_sm" src="images/4a.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare2.html"><img src="images/2a.png" alt="" /></a>
+					<a href="ghicitoare5.html"><img class="image_sm" src="images/5a.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare3.html"><img src="images/3a.png" alt="" /></a>
+					<a href="ghicitoare6.html"><img class="image_sm" src="images/6a.png" alt="" /></a>
 				</div>
 			</div>
 			<div class="columns4">
 				<div class="image fit">
-					<a href="ghicitoare4.html"><img src="images/4a.png" alt="" /></a>
+					<a href="ghicitoare7.html"><img class="image_sm" src="images/7a.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare5.html"><img src="images/5a.png" alt="" /></a>
+					<a href="ghicitoare8.html"><img class="image_sm" src="images/8a.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare6.html"><img src="images/6a.png" alt="" /></a>
+					<a href="ghicitoare9.html"><img class="image_sm" src="images/9a.png" alt="" /></a>
 				</div>
 				<div class="image fit">
-					<a href="ghicitoare7.html"><img src="images/7a.png" alt="" /></a>
-				</div>
-			</div>
-			<div class="columns3">
-				<div class="image fit">
-					<a href="ghicitoare8.html"><img src="images/8a.png" alt="" /></a>
-				</div>
-				<div class="image fit">
-					<a href="ghicitoare9.html"><img src="images/9a.png" alt="" /></a>
-				</div>
-				<div class="image fit">
-					<a href="ghicitoare10.html"><img src="images/10a.png" alt="" /></a>
+					<a href="ghicitoare10.html"><img class="image_sm" src="images/10a.png" alt="" /></a>
 				</div>
 
 			</div>
