--- a/ghicitoare6.html
+++ b/ghicitoare6.html
@@ -27,7 +27,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Jucăusă flacără,<br>Pe copaci se caţără.<br>Mică-i ea, dar coada-i mare<br>Şi din creangă-n creangă sare.<br>Ochii-i sunt mărgele vii<br>O cunoasteţi, voi, copii?<br>
-					<audio controls autoplay class= "sqs-audio-embed">
+					<audio controls autoplay>
 						<source src="audioText/t6.mp3">
 					</audio>
 				</p>
