--- a/ghicitoare7.html
+++ b/ghicitoare7.html
@@ -27,7 +27,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Hărnicuţă gospodină,<br>Strânge miere din grădină.<br>
-					<audio controls autoplay class= "sqs-audio-embed">
+					<audio controls autoplay>
 						<source src="audioText/t7.mp3">
 					</audio>
 				</p>
