--- a/ghicitoare1.html
+++ b/ghicitoare1.html
@@ -27,7 +27,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Are-o coadă înfoiată,<br>Hoaţă este şi şireată<br>Dar e vai de coada ei <br>Când dă peste ea Grivei.<br>
-					<audio controls autoplay class= "sqs-audio-embed">
+					<audio controls autoplay>
 						<source src="audioText/t1.mp3">
 					</audio>
 				</p>
