--- a/ghicitoare10.html
+++ b/ghicitoare10.html
@@ -27,7 +27,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Căței are,<br>dar nu latră<br>Și nu-l ții legat de poartă.<br>
-					<audio controls autoplay class= "sqs-audio-embed">
+					<audio controls autoplay>
 						<source src="audioText/t10.mp3">
 					</audio>
 				</p>
