--- a/ghicitoare2.html
+++ b/ghicitoare2.html
@@ -27,7 +27,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Are foi şi nu e pom,<br>Îţi vorbeşte ca un om.<br>
-					<audio controls autoplay class= "sqs-audio-embed">
+					<audio controls autoplay>
 						<source src="audioText/t2.mp3">
 					</audio>
 				</p>
