--- a/ghicitoare4.html
+++ b/ghicitoare4.html
@@ -27,7 +27,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Albă păsărică<br>Pe arac se ridică.<br>N-are aripioare<br>N-are nici picioare.<br>
-					<audio controls autoplay class= "sqs-audio-embed">
+					<audio controls autoplay>
 						<source src="audioText/t4.mp3">
 					</audio>
 				</p>
