--- a/ghicitoare5.html
+++ b/ghicitoare5.html
@@ -27,7 +27,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Umblă moşul prin pădure<br>După fragi şi mure.<br>
-					<audio controls autoplay class= "sqs-audio-embed">
+					<audio controls autoplay>
 						<source src="audioText/t5.mp3">
 					</audio>
 			</div>
