--- a/ghicitoare8.html
+++ b/ghicitoare8.html
@@ -27,7 +27,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Lungi urechi,<br>Picioare lungi<br>Doar cu pușca îl ajungi.<br>
-					<audio controls autoplay class= "sqs-audio-embed">
+					<audio controls autoplay>
 						<source src="audioText/t8.mp3">
 					</audio>
 				</p>
