--- a/ghicitoare9.html
+++ b/ghicitoare9.html
@@ -27,7 +27,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			<div class="pad-top-50">
 				<p class="riddleText">
 					Am cămăși nenumărate,<br>Plângi de le dezbraci pe toate!<br>
-					<audio controls autoplay class= "sqs-audio-embed">
+					<audio controls autoplay>
 						<source src="audioText/t9.mp3">
 					</audio>
 				</p>
