--- a/home.html
+++ b/home.html
@@ -16,11 +16,6 @@
 	<!-- Header -->
 	<header id="header" class="hide">
 		<div class="inner">
-			<div class="content">
-				<h1>Salut</h1>
-				<h2>Descopera cele mai interactive ghicitori</h2>
-				<a href="index.html" class="button big alt"><span>Sa incepem</span></a>
-			</div>
 			<a href="index.html" class="button hidden"><span>Sa incepem</span></a>
 		</div>
 	</header>
@@ -69,6 +64,12 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Header -->
+
+	<a href="ghicitoriOrdonate.html" >
+		<input type="image" src="images/hint.png" class="resize" id="checker_correct" align="centre" />
+	</a>
 
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
